slider bg color experiment

--- a/css/customizer.css
+++ b/css/customizer.css
@@ -1,6 +1,9 @@
 /*
- * Theme Customizer CSS
+ * Customizer CSS
  *
+ * Adjusts styling for theme option controls in the Customizer
+ *
+ * @package Merlin
  */
 
 #customize-control-merlin_control_slider_category,
