CSS adjustments and header tagline removal

--- a/style.css
+++ b/style.css
@@ -439,6 +439,7 @@ a {
 	text-decoration: none;
 }
 
+a:link,
 a:visited {
 	color: #2299cc;
 }
@@ -673,11 +674,6 @@ textarea {
 	color: #333;
 }
 
-.site-description {
-	margin-top: 0.4em;
-	color: #333;
-}
-
 /* Header Widgets */
 .header-widgets {
 	display: inline;
@@ -749,16 +745,6 @@ textarea {
 	text-transform: uppercase;
 }
 
-.top-navigation-menu a:link, 
-.top-navigation-menu a:visited {
-	color: #2299cc;
-	text-decoration: none;
-}
-
-.top-navigation-menu a:hover {
-	color: #333;
-}
-
 .top-navigation-menu ul {
 	position: absolute;
 	display: none;
@@ -790,12 +776,7 @@ textarea {
 
 .top-navigation-menu ul a:link, 
 .top-navigation-menu ul a:visited {
-	color: #2299cc;
 	text-decoration: none;
-}
-
-.top-navigation-menu ul a:hover {
-	color: #333;
 }
 
 .top-navigation-menu li ul ul {
@@ -1773,10 +1754,6 @@ textarea {
 }
 
 /* Theme Pagination */
-.post-pagination {
-	
-}
-
 .post-pagination a,
 .post-pagination .current {
 	display: inline-block;
@@ -1796,11 +1773,7 @@ textarea {
 	transition: all 0.4s ease;
 }
 
-.post-pagination a:hover {
-	color: #fff;
-	background-color: #2299cc;
-}
-
+.post-pagination a:hover,
 .post-pagination .current {
 	color: #fff;
 	background-color: #2299cc;
@@ -3043,7 +3016,7 @@ object {
 /* Ensure social icons are visible on desktop view */
 @media only screen and (min-width: 30em) {
 	
-	.social-icons-navigation .social-icons-menu {
+	.header-bar .social-icons-navigation {
 		display: block !important;
 	}
 	
